src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/GLXNVCopyBuffer_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/GLXNVCopyBuffer_StringErrorContext.class */
public final class GLXNVCopyBuffer_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glXCopyBufferSubDataNV(JJJIIJJJ)V", "net/labymod/core/laby3d/opengl/error/generated/GLXNVCopyBufferErrorContext");
        methods.put("glXNamedCopyBufferSubDataNV(JJJIIJJJ)V", "net/labymod/core/laby3d/opengl/error/generated/GLXNVCopyBufferErrorContext");
        return methods;
    }
}
